--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <title>Shooter</title>
   </head>
   <body>
+    <h3 id="score">Score: 0</h3>
     <div id="main-play-area">
       <img id="hero" src="./img/hero.png" alt="hero" />
+      <h4 id="game-instructions">Don't let the enemies invade your planet!</h4>
+      <div id="start-button">
+        <h1>START</h1>
+      </div>
     </div>
   </body>
   <script src="script.js"></script>
